The avatar stretch issue has been fixed

--- a/src/views/account/account-view.css
+++ b/src/views/account/account-view.css
@@ -29,6 +29,7 @@
   height: 70px;
   border-radius: 50%;
   margin-right: 20px;
+  object-fit: cover;
 }
 
 .card-info {
@@ -335,6 +336,7 @@
   height: 128px;
   border-radius: 50%;
   margin-bottom: 20px;
+  object-fit: cover;
 }
 
 .avatar-setting button {
