--- a/src/views/home/home-view.css
+++ b/src/views/home/home-view.css
@@ -120,6 +120,7 @@
   height: 2.5vw;
   border-radius: 50%;
   margin-right: 0.5rem;
+  object-fit: cover;
 }
 
 .owner-name {
